# fireworks

./: .gitignore  Cargo.toml  README.md  index.html  index.js
src/: firework.rs  lib.rs  main.rs  math.rs  particle.rs  renderer.rs  util.rs  world.rs
src/menu/: mod.rs
web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: gl.ts  index.html  index.js  index.ts  themes.json  themes.ts
web/src/shader/: frag.glsl  vert.glsl
