[package]
name = "fireworks"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tinyrand = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "=0.1.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
